ds_unit_tests/dkv_mma/bug.txt
root@tjzj-inf-sci-k8s-bzz2-0203:/home/users/chenquanlin/workspace/operator/test_operator/ds_unit_tests/dkv_mma# rm -rf build *.so && MAX_JOBS=192 python setup.py build_ext --inplace 2>&1 | tail -n 100
Remark: The warnings can be suppressed with "-diag-suppress <warning-number>"

/usr/local/lib/python3.12/dist-packages/torch/include/torch/csrc/api/include/torch/python.h(92): warning #3189-D: "module" is parsed as an identifier rather than a keyword because the tokens that follow it do not match those of a preprocessor directive
    module.attr(name) = wrapper_class;
    ^

/usr/local/lib/python3.12/dist-packages/torch/include/torch/csrc/api/include/torch/python.h(154): warning #3189-D: "module" is parsed as an identifier rather than a keyword because the tokens that follow it do not match those of a preprocessor directive
                module.to(
                ^

/usr/local/lib/python3.12/dist-packages/torch/include/torch/csrc/api/include/torch/python.h(158): warning #3189-D: "module" is parsed as an identifier rather than a keyword because the tokens that follow it do not match those of a preprocessor directive
                module.to(detail::py_object_to_dtype(object), non_blocking);
                ^

/usr/local/lib/python3.12/dist-packages/torch/include/torch/csrc/api/include/torch/python.h(169): warning #3189-D: "module" is parsed as an identifier rather than a keyword because the tokens that follow it do not match those of a preprocessor directive
                  module.to(detail::py_object_to_dtype(dtype), non_blocking);
                  ^

/usr/local/lib/python3.12/dist-packages/torch/include/torch/csrc/api/include/torch/python.h(171): warning #3189-D: "module" is parsed as an identifier rather than a keyword because the tokens that follow it do not match those of a preprocessor directive
                  module.to(detail::py_object_to_device(device), non_blocking);
                  ^

/usr/local/lib/python3.12/dist-packages/torch/include/torch/csrc/api/include/torch/python.h(173): warning #3189-D: "module" is parsed as an identifier rather than a keyword because the tokens that follow it do not match those of a preprocessor directive
                  module.to(
                  ^

/home/users/chenquanlin/workspace/operator/FlashMLA/csrc/cutlass/include/cute/atom/mma_traits_sm100.hpp(502): error: static assertion failed with "UMMA_1SM M-mode size should be 64 or 128."
        static_assert(M_MMA == 64 || M_MMA == 128, "UMMA_1SM M-mode size should be 64 or 128.");
        ^
          detected during:
            instantiation of "auto cute::UMMA::tmem_frg<ValueType, StorageType, N_SM, TmemAlloc>::make(const TmemShape &) [with ValueType=test_operator::dkv_mma::bf16, StorageType=test_operator::dkv_mma::bf16, N_SM=1, TmemAlloc=cute::UMMA::TmemAllocMode::NonInterleaved, TmemShape=cute::tuple<cute::tuple<cute::C<32>, cute::C<16>>, cute::_1, cute::_4>]" at line 974
            instantiation of "auto cute::MakeTensor<cute::UMMA::tmem_frg<ValueType, StorageType, N_SM, TmemAlloc>>::operator()(const Shape &) [with ValueType=test_operator::dkv_mma::bf16, StorageType=test_operator::dkv_mma::bf16, N_SM=1, TmemAlloc=cute::UMMA::TmemAllocMode::NonInterleaved, Shape=cute::Layout<cute::tuple<cute::tuple<cute::C<32>, cute::C<16>>, cute::_1, cute::_4>, cute::tuple<cute::tuple<cute::C<1>, cute::C<32>>, cute::C<0>, cute::C<512>>>]" at line 401 of /home/users/chenquanlin/workspace/operator/FlashMLA/csrc/cutlass/include/cute/tensor_impl.hpp
            instantiation of "auto cute::make_tensor<T,Args...>(const Args &...) [with T=cute::UMMA::tmem_frg<test_operator::dkv_mma::bf16, test_operator::dkv_mma::bf16, 1, cute::UMMA::TmemAllocMode::NonInterleaved>, Args=<cute::Layout<cute::tuple<cute::tuple<cute::C<32>, cute::C<16>>, cute::_1, cute::_4>, cute::tuple<cute::tuple<cute::C<1>, cute::C<32>>, cute::C<0>, cute::C<512>>>>]" at line 457 of /home/users/chenquanlin/workspace/operator/FlashMLA/csrc/cutlass/include/cute/tensor_impl.hpp
            instantiation of "auto cute::make_fragment_like<NewT,Layout>(const Layout &) [with NewT=cute::UMMA::tmem_frg<test_operator::dkv_mma::bf16, test_operator::dkv_mma::bf16, 1, cute::UMMA::TmemAllocMode::NonInterleaved>, Layout=cute::tuple<cute::tuple<cute::C<32>, cute::C<16>>, cute::_1, cute::_4>]" at line 165 of /home/users/chenquanlin/workspace/operator/FlashMLA/csrc/cutlass/include/cute/atom/mma_atom.hpp
            instantiation of "auto cute::MMA_Atom<cute::MMA_Traits<MMAOperation, Args...>>::make_fragment_A(ATensor &&) [with MMAOperation=cute::SM100_MMA_F16BF16_WS_TS_NOELECT<test_operator::dkv_mma::bf16, test_operator::dkv_mma::bf16, float, 32, 256, cute::UMMA::Major::K, cute::UMMA::Major::MN, cute::UMMA::ScaleIn::One, cute::UMMA::ScaleIn::One>, Args=<>, ATensor=cute::tuple<cute::tuple<cute::C<32>, cute::C<16>>, cute::_1, cute::_4>]" at line 113 of /home/users/chenquanlin/workspace/operator/test_operator/ds_unit_tests/dkv_mma/test_dkv_mma.cu

/home/users/chenquanlin/workspace/operator/test_operator/ds_unit_tests/dkv_mma/test_dkv_mma.cu(112): error: cannot deduce "auto" type
      auto tS_dKV = tiled_mma_dKV.get_slice(_0{}).make_fragment_A(
      ^

/home/users/chenquanlin/workspace/operator/test_operator/ds_unit_tests/dkv_mma/test_dkv_mma.cu(116): error: cannot deduce "auto" type
      auto tDS_dKV = tiled_mma_dKV.get_slice(_0{}).make_fragment_A(
      ^

/home/users/chenquanlin/workspace/operator/test_operator/ds_unit_tests/dkv_mma/test_dkv_mma.cu(120): error: cannot deduce "auto" type
      auto tDS_dKV_rope = tiled_mma_dKV_rope.get_slice(_0{}).make_fragment_A(
      ^

4 errors detected in the compilation of "/home/users/chenquanlin/workspace/operator/test_operator/ds_unit_tests/dkv_mma/test_dkv_mma.cu".
ninja: build stopped: subcommand failed.
Traceback (most recent call last):
  File "/usr/local/lib/python3.12/dist-packages/torch/utils/cpp_extension.py", line 2557, in _run_ninja_build
    subprocess.run(
  File "/usr/lib/python3.12/subprocess.py", line 571, in run
    raise CalledProcessError(retcode, process.args,
subprocess.CalledProcessError: Command '['ninja', '-v', '-j', '192']' returned non-zero exit status 1.

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/users/chenquanlin/workspace/operator/test_operator/ds_unit_tests/dkv_mma/setup.py", line 56, in <module>
    setup(
  File "/usr/local/lib/python3.12/dist-packages/setuptools/__init__.py", line 117, in setup
    return distutils.core.setup(**attrs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.12/dist-packages/setuptools/_distutils/core.py", line 186, in setup
    return run_commands(dist)
           ^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.12/dist-packages/setuptools/_distutils/core.py", line 202, in run_commands
    dist.run_commands()
  File "/usr/local/lib/python3.12/dist-packages/setuptools/_distutils/dist.py", line 1002, in run_commands
    self.run_command(cmd)
  File "/usr/local/lib/python3.12/dist-packages/setuptools/dist.py", line 1104, in run_command
    super().run_command(command)
  File "/usr/local/lib/python3.12/dist-packages/setuptools/_distutils/dist.py", line 1021, in run_command
    cmd_obj.run()
  File "/usr/local/lib/python3.12/dist-packages/setuptools/command/build_ext.py", line 99, in run
    _build_ext.run(self)
  File "/usr/local/lib/python3.12/dist-packages/setuptools/_distutils/command/build_ext.py", line 368, in run
    self.build_extensions()
  File "/usr/local/lib/python3.12/dist-packages/torch/utils/cpp_extension.py", line 1052, in build_extensions
    build_ext.build_extensions(self)
  File "/usr/local/lib/python3.12/dist-packages/setuptools/_distutils/command/build_ext.py", line 484, in build_extensions
    self._build_extensions_serial()
  File "/usr/local/lib/python3.12/dist-packages/setuptools/_distutils/command/build_ext.py", line 510, in _build_extensions_serial
    self.build_extension(ext)
  File "/usr/local/lib/python3.12/dist-packages/setuptools/command/build_ext.py", line 264, in build_extension
    _build_ext.build_extension(self, ext)
  File "/usr/local/lib/python3.12/dist-packages/Cython/Distutils/build_ext.py", line 136, in build_extension
    super().build_extension(ext)
  File "/usr/local/lib/python3.12/dist-packages/setuptools/_distutils/command/build_ext.py", line 565, in build_extension
    objects = self.compiler.compile(
              ^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.12/dist-packages/torch/utils/cpp_extension.py", line 836, in unix_wrap_ninja_compile
    _write_ninja_file_and_compile_objects(
  File "/usr/local/lib/python3.12/dist-packages/torch/utils/cpp_extension.py", line 2209, in _write_ninja_file_and_compile_objects
    _run_ninja_build(
  File "/usr/local/lib/python3.12/dist-packages/torch/utils/cpp_extension.py", line 2574, in _run_ninja_build
    raise RuntimeError(message) from e
RuntimeError: Error compiling objects for extension
